[gd_scene load_steps=3 format=3 uid="uid://c4oyancw0pbb3"]

[ext_resource type="Script" uid="uid://co2x16ftx83tu" path="res://scripts/combat.gd" id="1_k8wyi"]
[ext_resource type="Script" uid="uid://dfb2mwv7xrc6d" path="res://scripts/end_turn_button.gd" id="7_csq56"]

[node name="CombatScene" type="Node2D"]
script = ExtResource("1_k8wyi")

[node name="PlayerSpawn" type="Node2D" parent="."]

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="EndTurnButton" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "End Turn"
script = ExtResource("7_csq56")

[connection signal="pressed" from="EndTurnButton" to="." method="_on_button_back"]
